[TASK] CSS For autoconfiguration

--- a/Resources/Private/Partials/BackendTabs/autoconfiguration.html
+++ b/Resources/Private/Partials/BackendTabs/autoconfiguration.html
@@ -20,10 +20,10 @@
             <f:form method="post" action="index">
 
 
-                    <a class="btn" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                  Start a new Scan ->
+                    <a class="btn btn-dark" data-bs-toggle="collapse" href="#collapseAutoconfigurationForm" role="button" aria-expanded="false" aria-controls="collapseAutoconfigurationForm">
+                        Show Scan interface
                     </a>
-                    <div class="collapse" id="collapseExample">
+                    <div class="collapse" id="collapseAutoconfigurationForm">
                         <div class="card card-body">
                             By clicking on the Scan button, an external web scanner will scan 10 pages of your website and detect any embedded scripts, iframes, and cookies.<br>
                             These can be imported using the Import button after a successful scan.<br>
@@ -71,7 +71,7 @@
                         </div>
 
 
-                        <f:form.button class="btn btn-secondary " type="submit">Start a new Scan</f:form.button>
+                        <f:form.button class="btn btn-success " type="submit">Start a new Scan</f:form.button>
                         <hr>
                     </div>
 
@@ -201,10 +201,10 @@
                         <i class="fa fa-info fa-stack-1x"></i>
                     </span>
                     </div>
-                    <div class="media-body"><p class="alert-message"><strong>Auto Configuration</strong><br>
-                        Auto Configuration are responsible for identifying Services used on your website.<br><br>
-                        <br>Use it as a starting point for your analysis.
-                        <a  target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/AutoConfiguration/Index.html">Autoconfiguration Docs</a>
+                    <div class="media-body"><p><strong>Auto Configuration</strong><br>
+                        Auto Configuration are responsible for identifying Services used on your website.<br>
+                        <br>Use it as a starting point for your analysis.<br>
+                        <a  target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/AutoConfiguration/Index.html">Autoconfiguration Docs</a><br>
                         <a  target="_blank" href="https://cookieapi.coding-freaks.com/scan">CodingFreaks Cookie API & Scanner</a>
                     </p>
                     </div>
