--- a/Resources/Private/Partials/BackendTabs/categories.html
+++ b/Resources/Private/Partials/BackendTabs/categories.html
@@ -32,7 +32,7 @@
                 <div class="media">
                     <div class="media-left"><span class="fa-stack fa-lg">        <i class="fa fa-circle fa-stack-2x"></i>        <i class="fa fa-info fa-stack-1x"></i>      </span>
                     </div>
-                    <div class="media-body"><p class="alert-message"><strong>Category Configuration</strong><br>
+                    <div class="media-body"><p><strong>Category Configuration</strong><br>
                         Cookie Category are responsible for the Group management of the Settings Modal.<br><br>
                         For more information, please refer to the following link: <a target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/CookieCategories/Index.html">Cookie Category Configuration -></a>
                     </p>
