--- a/Resources/Private/Partials/BackendTabs/frontend.html
+++ b/Resources/Private/Partials/BackendTabs/frontend.html
@@ -32,7 +32,7 @@
                             class="fa fa-circle fa-stack-2x"></i>        <i class="fa fa-info fa-stack-1x"></i>      </span>
                     </div>
                     <div class="media-body">
-                        <p class="alert-message"><strong>Frontend Settings</strong><br>
+                        <p ><strong>Frontend Settings</strong><br>
                             Cookie frontend settings are responsible for the UI texts of the cookie box.<br><br>
                             For more information, please refer to the following link: <a target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/FrontendSettings/Index.html">Cookie Frontend Settings -></a>
                         </p>
