--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -18,7 +18,7 @@
                         <i class="fa fa-info fa-stack-1x"></i></span>
                     </div>
                     <div class="media-body">
-                        <p class="alert-message"><strong>Current configuration</strong></p>
+                        <p ><strong>Current configuration</strong></p>
                     </div>
                 </div>
             </div>
