--- a/Resources/Public/Backend/Css/CookieSettings.scss
+++ b/Resources/Public/Backend/Css/CookieSettings.scss
@@ -60,6 +60,15 @@ table.dataTable{
   }
 }
 
+#collapseAutoconfigurationForm{
+  background: #ebebeb;
+  padding: 20px;
+  .card{
+    padding-bottom: 10px;
+  }
+}
+
+
 
 .autoconfiguration_form_configuration{
   .autoconfiguration_form_configuration_row{
