--- a/Resources/Private/Partials/BackendTabs/services.html
+++ b/Resources/Private/Partials/BackendTabs/services.html
@@ -36,7 +36,7 @@
                     <div class="media-left"><span class="fa-stack fa-lg">        <i
                             class="fa fa-circle fa-stack-2x"></i>        <i class="fa fa-info fa-stack-1x"></i>      </span>
                     </div>
-                    <div class="media-body"><p class="alert-message"><strong>Service Configuration</strong><br>
+                    <div class="media-body"><p><strong>Service Configuration</strong><br>
                         Cookie services responsible for the Iframe and Script management of the website.<br><br>
                         For more information, please refer to the following link: <a target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/CookieServices/Index.html">Cookie Services Configuration -></a>
                     </p>
