[TASK] Fix Boostrap 4 and added Info to Doc Settings.cfg

--- a/Resources/Private/Partials/BackendTabs/autoconfiguration.html
+++ b/Resources/Private/Partials/BackendTabs/autoconfiguration.html
@@ -32,7 +32,7 @@
                         </div>
 
 
-                        <div class="row g-3 align-items-center">
+                        <div class="row  align-items-center">
                             <div class="col-auto">
                                 <label for="scanTarget" class="col-form-label">Scan Target</label>
                             </div>
@@ -40,13 +40,13 @@
                                 <f:form.textfield placeholder="{scanTarget}mysitemap.xml" style="width:400px;" class="form-control  active" value="{scanTarget}" id="scanTarget" name="target"></f:form.textfield>
                             </div>
                             <div class="col-auto">
-                                <span id="passwordHelpInline" class="form-text">
+                                <span class="form-text">
                                  URL or Sitemap.xml path  (ex. https://example.com or https://example.com/sitemap.xml)
                                 </span>
                             </div>
                         </div>
 
-                        <div class="row g-3 align-items-center">
+                        <div class="row  align-items-center">
                             <div class="col-auto">
                                 <label for="limit" class="col-form-label">Max Pages to Scan</label>
                             </div>
@@ -54,14 +54,14 @@
                                 <f:form.textfield type="number" placeholder="Max Pages to Scan, default: 10"  class="form-control t3js-datetimepicker t3js-clearable flatpickr-input active" value="10" id="limit" name="limit"></f:form.textfield>
                             </div>
                             <div class="col-auto">
-                                <span id="passwordHelpInline" class="form-text">
+                                <span class="form-text">
                                     Max Pages to Scan, default: 10, extend limit by entering an Free API Key in Extension Settings
                                 </span>
                             </div>
                         </div>
 
 
-                        <div class="row g-3 align-items-center">
+                        <div class="row  align-items-center">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
                                 <label class="form-check-label" for="disabledFieldsetCheck">
