[TASK] Added Ngrok Support

--- a/Resources/Private/Partials/BackendTabs/autoconfiguration.html
+++ b/Resources/Private/Partials/BackendTabs/autoconfiguration.html
@@ -63,9 +63,15 @@
 
                         <div class="row  align-items-center">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
-                                <label class="form-check-label" for="disabledFieldsetCheck">
+                                <input class="form-check-input" type="checkbox" name="disable-consent-optin" id="disable-consent-optin" >
+                                <label class="form-check-label" for="disable-consent-optin">
                                     Disable Automatic consent Optin
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="ngrok-skip" id="ngrok-skip" >
+                                <label class="form-check-label" for="ngrok-skip">
+                                    ngrok - skip Browser Warning
                                 </label>
                             </div>
                         </div>
