[TEST] Try Brave browser support, and found a issue with adblockers and the onFirstAction method

--- a/Resources/Public/Scss/default.scss
+++ b/Resources/Public/Scss/default.scss
@@ -41,7 +41,7 @@
   }
 }
 
-.cc_div  #cookie-wrapper .act.exp:before{
+.cc_div  #cf-category-wrapper .act.exp:before{
   transform: translateY(-20%) rotate(225deg);
 }
 
