--- a/Resources/Public/Scss/default.css
+++ b/Resources/Public/Scss/default.css
@@ -572,7 +572,6 @@
     height: 100%;
     width: 0.9em;
   }
-
   #s-bl::-webkit-scrollbar-thumb {
     background: #cfd5db;
     background: var(--cc-webkit-scrollbar-bg);
@@ -580,12 +579,10 @@
     border: 0.25em solid var(--cc-bg);
     border-radius: 100em;
   }
-
   #s-bl::-webkit-scrollbar-thumb:hover {
     background: #9199a0;
     background: var(--cc-webkit-scrollbar-bg-hover);
   }
-
   #s-bl::-webkit-scrollbar-button {
     height: 5px;
     width: 10px;
@@ -1080,121 +1077,96 @@ html.force--consent.show--consent, html.force--consent.show--consent body {
     right: 1em;
     width: auto;
   }
-
   .force--consent #cm, .force--consent #cm.cloud {
     max-width: 100vw;
     width: auto;
   }
-
   #cm.top {
     bottom: auto;
     top: 1em;
   }
-
   #cm.bottom {
     bottom: 1em;
     top: auto;
   }
-
   #cm.bar.bottom {
     bottom: 0;
   }
-
   #cm.cloud .c-bn {
     font-size: 0.85em;
   }
-
   #s-bns, .cc_div .bar #s-bns {
     padding: 1em 1.3em;
   }
-
   .cc_div .bar #s-inr {
     max-width: 100%;
     width: 100%;
   }
-
   .cc_div .cloud #c-inr-i {
     padding-right: 0;
   }
-
   #cs {
     border-radius: 0;
     padding: 0;
   }
-
   #c-s-in {
     height: 100%;
     max-height: 100%;
     top: 0;
     transform: none;
   }
-
   .cc_div .b-tg {
     right: 1.1em;
     transform: scale(1.1);
   }
-
   #s-inr {
     border-radius: 0;
     margin: 0;
     padding-bottom: 7.9em;
   }
-
   #s-bns {
     height: 7.9em;
   }
-
   #s-bl, .cc_div .bar #s-bl {
     padding: 1.3em;
   }
-
   #s-hdr, .cc_div .bar #s-hdr {
     padding: 0 1.3em;
   }
-
   #s-bl table {
     width: 100%;
   }
-
   #s-inr.bns-t {
     padding-bottom: 10.5em;
   }
-
   .bns-t #s-bns {
     height: 10.5em;
   }
-
   .cc_div .bns-t .c-bn {
     font-size: 0.83em;
     padding: 0.9em 1.6em;
   }
-
   #s-cnt .b-bn .b-tl {
     padding-bottom: 1.2em;
     padding-top: 1.2em;
   }
-
   #s-bl table, #s-bl tbody, #s-bl td, #s-bl th, #s-bl thead, #s-bl tr, #s-cnt {
     display: block;
   }
-
   #s-bl thead tr {
     left: -9999px;
     position: absolute;
     top: -9999px;
   }
-
   #s-bl tr {
     border-top: 1px solid #e9edf2;
     border-top: 1px solid var(--cc-cookie-table-border);
   }
-
   #s-bl td {
     border: none;
     padding-left: 35%;
     position: relative;
   }
-
   #s-bl td:before {
     color: #2d4156;
     color: var(--cc-text);
@@ -1206,46 +1178,37 @@ html.force--consent.show--consent, html.force--consent.show--consent body {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
-
   #cm .c-bn, .cc_div .c-bn {
     margin-right: 0;
     width: 100%;
   }
-
   #s-cnt #s-rall-bn {
     margin-left: 0;
   }
-
   .cc_div #c-bns {
     flex-direction: column;
   }
-
   #c-bns button + button, #s-cnt button + button {
     float: unset;
     margin-left: 0;
     margin-top: 0.625em;
   }
-
   #cm.box, #cm.cloud {
     left: 1em;
     right: 1em;
     width: auto;
   }
-
   #cm.cloud.left, #cm.cloud.right {
     margin: 0;
   }
-
   .cc_div .cloud #c-bns, .cc_div .cloud #c-inr, .cc_div .cloud #c-inr-i {
     display: block;
     min-width: unset;
     width: auto;
   }
-
   .cc_div .cloud #c-txt {
     font-size: 0.9em;
   }
-
   .cc_div .cloud #c-bns {
     margin-top: 1.625em;
   }
@@ -1659,7 +1622,7 @@ div[data-service] .c-n-t a:hover {
   vertical-align: top;
 }
 
-.cc_div #cookie-wrapper .act.exp:before {
+.cc_div #cf-category-wrapper .act.exp:before {
   transform: translateY(-20%) rotate(225deg);
 }
 
