--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -22,7 +22,7 @@ table.dataTable {
 }
 
 .unknown-variables, .unknown-variables a {
-  color: red;
+  color: red !important;
 }
 
 .configurationTree {
@@ -87,6 +87,54 @@ table.dataTable {
 .loadingcontainer .text {
   text-align: center;
   font-size: 28px;
+}
+
+.settings-configuration .setting-item {
+  background-color: #EBEBEB;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+.settings-configuration .setting-item .setting-button {
+  color: white;
+  padding: 6px 18px;
+  border-radius: 5px;
+  font-size: 14px;
+  background-color: #1491AF;
+}
+.settings-configuration .settings-item-head {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: space-between;
+}
+.settings-configuration .settings-item-head a {
+  color: #4B4B4B;
+  font-weight: bold;
+}
+.settings-configuration .settings-item-head h3 {
+  margin: 0;
+}
+.settings-configuration .settings-item-head-line {
+  margin-bottom: 10px;
+  border-bottom: solid 2px #BEBEBE;
+}
+.settings-configuration .setting-item-row a {
+  font-size: 14px;
+  color: #4B4B4B;
+}
+.settings-configuration .setting-item-row .settings-block {
+  background-color: #BEBEBE;
+  padding: 10px;
+  font-weight: bold;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.edit-icon-white {
+  padding-bottom: 5px;
 }
 
 /*# sourceMappingURL=CookieSettings.css.map */
