[TASK] Added Guided Tours

--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -64,9 +64,21 @@
 
         </div>
         <div class="col col-sm-12 col-md-4 col-xl-4">
-                <h3>Tutorial Section</h3>
+                <h3>Tutorial Section (BETA)</h3>
+                <p>Let guide you through the configuration with a Live Tutorial.<br> Click on a "start" button below to start a Guided Tour.</p>
+                <div class="tutorial-tours">
+                    <div class="tutorial-tour">
+                        <p>Assign your first cookie service to a Category</p>
+                        <button class="btn btn-primary" id="start-categories-tour">Start</button>
 
-            <button id="start-categories-tour"> Live Tutorial: Assign your first cookie service.</button>
+                    </div>
+                    <div class="tutorial-tour">
+                        <p>Create a custom service.</p>
+                        <button  class="btn btn-primary" id="start-service-tour">Start</button>
+                    </div>
+                </div>
+
+
         </div>
         </div>
 </div>
