--- a/Resources/Private/Partials/BackendTabs/services.html
+++ b/Resources/Private/Partials/BackendTabs/services.html
@@ -28,7 +28,7 @@
         <div class="col col-sm-12 col-md-12 col-xl-4">
 
             <div style="margin-bottom: 40px;">
-                <be:link.newRecord  class="btn btn-default"  table="tx_cfcookiemanager_domain_model_cookieservice" >   Create new Service </be:link.newRecord>
+                <be:link.newRecord pid="{storageUID}" id="createNewServiceLink" class="btn btn-default"  table="tx_cfcookiemanager_domain_model_cookieservice" >   Create new Service </be:link.newRecord>
             </div>
 
             <div class="alert alert-info">
