--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -133,6 +133,18 @@ table.dataTable {
   justify-content: space-between;
 }
 
+.tutorial-tours .tutorial-tour {
+  justify-content: space-between;
+  display: flex;
+  padding: 10px;
+  background-color: #EBEBEB;
+  margin-bottom: 15px;
+}
+.tutorial-tours .tutorial-tour p {
+  padding-left: 5px;
+  margin: 0;
+}
+
 .edit-icon-white {
   padding-bottom: 5px;
 }
