[TASK] Optimized Tours

--- a/Resources/Private/Partials/BackendTabs/categories.html
+++ b/Resources/Private/Partials/BackendTabs/categories.html
@@ -25,7 +25,7 @@
         </div>
         <div class="col col-sm-12 col-md-12 col-xl-4">
             <div style="margin-bottom: 40px;">
-                <be:link.newRecord  class="btn btn-default"  table="tx_cfcookiemanager_domain_model_cookiecartegories" >   Create new Category </be:link.newRecord>
+                <be:link.newRecord  pid="{storageUID}" class="btn btn-default"  table="tx_cfcookiemanager_domain_model_cookiecartegories" >   Create new Category </be:link.newRecord>
             </div>
 
             <div class="alert alert-info">
