--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -68,13 +68,16 @@
                 <p>Let guide you through the configuration with a Live Tutorial.<br> Click on a "start" button below to start a Guided Tour.</p>
                 <div class="tutorial-tours">
                     <div class="tutorial-tour">
-                        <p>Assign your first cookie service to a Category</p>
-                        <button class="btn btn-primary" id="start-categories-tour">Start</button>
-
+                        <p>Start a Tour thought the Frontend Settings.</p>
+                        <button  class="btn btn-primary" id="start-frontend-tour">Start Tutorial</button>
                     </div>
                     <div class="tutorial-tour">
-                        <p>Create a custom service.</p>
-                        <button  class="btn btn-primary" id="start-service-tour">Start</button>
+                        <p>Start a Tour thought to assign your first cookie service to a category</p>
+                        <button class="btn btn-primary" id="start-categories-tour">Start Tutorial</button>
+                    </div>
+                    <div class="tutorial-tour">
+                        <p>Start a Tour thought to create a custom service.</p>
+                        <button  class="btn btn-primary" id="start-service-tour">Start Tutorial</button>
                     </div>
                 </div>
 
