[DOC] Added Changelog

--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -66,6 +66,8 @@
         <div class="col col-sm-12 col-md-4 col-xl-4">
                 <h3>Tutorial Section (BETA)</h3>
                 <p>Let guide you through the configuration with a Live Tutorial.<br> Click on a "start" button below to start a Guided Tour.</p>
+                <br/>
+                <p>Data is stored in the session storage, clear it, if you have problems with this section, a page reload can help to.</p>
                 <div class="tutorial-tours">
                     <div class="tutorial-tour">
                         <p>Start a Tour thought the Frontend Settings.</p>
