[TASK] Updated Tours to Boostrap 5, implemented a simple Tour Manager

--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -71,15 +71,15 @@
                 <div class="tutorial-tours">
                     <div class="tutorial-tour">
                         <p>Start a Tour thought the Frontend Settings.</p>
-                        <button  class="btn btn-primary" id="start-frontend-tour">Start Tutorial</button>
+                        <button  class="btn btn-primary startTour"  data-tour="FrontendTour" id="start-frontend-tour">Start Tutorial</button>
                     </div>
                     <div class="tutorial-tour">
                         <p>Start a Tour thought to assign your first cookie service to a category</p>
-                        <button class="btn btn-primary" id="start-categories-tour">Start Tutorial</button>
+                        <button class="btn btn-primary startTour" data-tour="CategoryTour" id="start-categories-tour">Start Tutorial</button>
                     </div>
                     <div class="tutorial-tour">
                         <p>Start a Tour thought to create a custom service.</p>
-                        <button  class="btn btn-primary" id="start-service-tour">Start Tutorial</button>
+                        <button  class="btn btn-primary startTour" data-tour="ServiceTour" id="start-service-tour">Start Tutorial</button>
                     </div>
                 </div>
 
