--- a/Resources/Public/Scss/default.css
+++ b/Resources/Public/Scss/default.css
@@ -1609,6 +1609,7 @@ div[data-service] .c-n-t a:hover {
 }
 #s-cnt .block-section .b-ex .desc {
   margin-left: 20px;
+  margin-right: 20px;
 }
 #s-cnt .cfwrapper .cf-category-description {
   font-size: 0.8em;
