--- a/Resources/Public/Backend/Css/CookieSettings.scss
+++ b/Resources/Public/Backend/Css/CookieSettings.scss
@@ -173,3 +173,10 @@ table.dataTable{
 .edit-icon-white{
   padding-bottom: 5px;
 }
+
+.cf-cookiemanager-alert{
+  color: rgb(44, 68, 90);
+  padding: 35px;
+  background-color: rgb(226, 238, 249);
+  border-color: rgba(197, 221, 243, 0.61);
+}
