--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -149,4 +149,11 @@ table.dataTable {
   padding-bottom: 5px;
 }
 
+.cf-cookiemanager-alert {
+  color: rgb(44, 68, 90);
+  padding: 35px;
+  background-color: rgb(226, 238, 249);
+  border-color: rgba(197, 221, 243, 0.61);
+}
+
 /*# sourceMappingURL=CookieSettings.css.map */
