[TEST] Backend Tours

--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -58,28 +58,24 @@
                 </div>
                 </f:for>
             </div>
-
-
-
-
         </div>
         <div class="col col-sm-12 col-md-4 col-xl-4">
                 <h3>Tutorial Section (BETA)</h3>
                 <p>Let guide you through the configuration with a Live Tutorial.<br> Click on a "start" button below to start a Guided Tour.</p>
                 <br/>
-                <p>Data is stored in the session storage, clear it, if you have problems with this section, a page reload can help to.</p>
+                <p> <strong>NOTICE: </strong><br>Tutorial Data is stored in your browsers session storage, clear it, if you have problems with this section, a page reload can help to.</p>
                 <div class="tutorial-tours">
                     <div class="tutorial-tour">
                         <p>Start a Tour thought the Frontend Settings.</p>
-                        <button  class="btn btn-primary startTour"  data-tour="FrontendTour" id="start-frontend-tour">Start Tutorial</button>
+                        <button  class="btn btn-primary startTour"  data-tour="FrontendTour" id="start-frontend-tour">Start Frontend Tour</button>
                     </div>
                     <div class="tutorial-tour">
-                        <p>Start a Tour thought to assign your first cookie service to a category</p>
+                        <p>Start a Tour to assign your first cookie service to a category</p>
                         <button class="btn btn-primary startTour" data-tour="CategoryTour" id="start-categories-tour">Start Tutorial</button>
                     </div>
                     <div class="tutorial-tour">
-                        <p>Start a Tour thought to create a custom service.</p>
-                        <button  class="btn btn-primary startTour" data-tour="ServiceTour" id="start-service-tour">Start Tutorial</button>
+                        <p>Start a Tour to create a custom service.</p>
+                        <button  class="btn btn-primary startTour" data-tour="ServiceTour" id="start-service-tour">Custom Service Tutorial</button>
                     </div>
                 </div>
 
